--- a/Week_07/src/main/resources/application-sharding.yml
+++ b/Week_07/src/main/resources/application-sharding.yml
@@ -1,43 +1,46 @@
-spring:
-  # 相关的配置
-  shardingsphere:
-    props:
-      sql-show: true
-    datasource:
-      common:
-        type: com.zaxxer.hikari.HikariDataSource
-        driver-class-name: com.mysql.cj.jdbc.Driver
-      # 配置数据源的名称
-      names: ds1,ds2,ds3
-      # 第一个数据源
-      ds1:
-        type: com.zaxxer.hikari.HikariDataSource
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbcUrl: jdbc:mysql://localhost:3306/test_db1?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-        username: root
-        password: deepwise
-      # 第二个数据源
-      ds2:
-        type: com.zaxxer.hikari.HikariDataSource
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbcUrl: jdbc:mysql://localhost:3306/test_db2?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-        username: root
-        password: deepwise
-      ds3:
-        type: com.zaxxer.hikari.HikariDataSource
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbcUrl: jdbc:mysql://localhost:3306/test_db3?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-        username: root
-        password: deepwise
-    rules:
-      replica-query:
-        data-sources:
-          ds:
-            primary-data-source-name: ds1
-            replica-data-source-names: ds2,ds3
-            load-balancer-name: round-robin
-        load-balancers:
-          round-robin:
-            type: ROUND_ROBIN
-            props:
-              defaule: 0
+# 配置真实数据源
+dataSources:
+  # 配置第 1 个数据源
+  ds0: !!com.zaxxer.hikari.HikariDataSource
+    driverClassName: com.mysql.jdbc.Driver
+    jdbcUrl: jdbc:mysql://localhost:3306/ds0
+    username: root
+    password:
+  # 配置第 2 个数据源
+  ds1: !!com.zaxxer.hikari.HikariDataSource
+    driverClassName: com.mysql.jdbc.Driver
+    jdbcUrl: jdbc:mysql://localhost:3306/ds1
+    username: root
+    password: 
+
+rules:
+# 配置分片规则
+- !SHARDING
+  tables:
+    # 配置 t_order 表规则
+    t_order: 
+      actualDataNodes: ds${0..1}.t_order${0..1}
+      # 配置分库策略
+      databaseStrategy:
+        standard:
+          shardingColumn: user_id
+          shardingAlgorithmName: database_inline
+      # 配置分表策略
+      tableStrategy:
+        standard:
+          shardingColumn: order_id
+          shardingAlgorithmName: table_inline
+    t_order_item: 
+    # 省略配置 t_order_item 表规则...
+    # ...
+    
+  # 配置分片算法
+  shardingAlgorithms:
+    database_inline:
+      type: INLINE
+      props:
+        algorithm-expression: ds${user_id % 2}
+    table_inline:
+      type: INLINE
+      props:
+        algorithm-expression: t_order_${order_id % 2}
