--- a/Week_09/dubbo-hmily/consumer/src/main/resources/application.yml
+++ b/Week_09/dubbo-hmily/consumer/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-debug: true
+#debug: true
 server:
   port: 9000
 dubbo:
@@ -6,14 +6,16 @@ dubbo:
     id: consumer
     name: consumer
   registry:
-    address: zookeeper://127.0.0.1:2181
+    address: zookeeper://192.168.11.104:2181
   monitor:
     protocol: registry
   metadata-report:
-    address: zookeeper://127.0.0.1:2181
+    address: zookeeper://192.168.11.104:2181
+  config-center:
+    timeout: 10000
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hmily_fx1?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://192.168.11.104:3306/hmily_fx1?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8
     username: root
     password: deepwise
