--- a/Week_09/dubbo-hmily/provider/src/main/resources/application.yml
+++ b/Week_09/dubbo-hmily/provider/src/main/resources/application.yml
@@ -1,8 +1,9 @@
+#debug: true
 server:
   port: 8090
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hmily_fx2?serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.11.104:3306/hmily_fx2?serverTimezone=Asia/Shanghai
     username: root
     password: deepwise
 mybatis:
@@ -12,14 +13,16 @@ dubbo:
     id: provider
     name: provider
   registry:
-    address: zookeeper://127.0.0.1:2181
+    address: zookeeper://192.168.11.104:2181
   metadata-report:
-    address: zookeeper://localhost:2181
+    address: zookeeper://192.168.11.104:2181
   protocol:
     port: 20000
     name: dubbo
   monitor:
     protocol: registry
+  config-center:
+    timeout: 10000
 logging:
   level:
     com:
