--- a/Week_09/rpcnetty/pom.xml
+++ b/Week_09/rpcnetty/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.0.9.RELEASE</version>
 <!--		<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
 	</parent>
-	<groupId>io.kimmking</groupId>
+	<groupId>com.yilefeng</groupId>
 	<artifactId>rpcfx</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rpcfx</name>
