--- a/Week_09/rpcnetty/rpcfx-demo-api/pom.xml
+++ b/Week_09/rpcnetty/rpcfx-demo-api/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>io.kimmking</groupId>
+		<groupId>com.yilefeng</groupId>
 		<artifactId>rpcfx</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 <!--		<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
 	</parent>
-	<groupId>io.kimmking</groupId>
+	<groupId>com.yilefeng</groupId>
 	<artifactId>rpcfx-demo-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rpcfx-demo-api</name>
